cmake_minimum_required(VERSION 3.10)

if(NOT CMAKE_BUILD_TYPE)
  message(STATUS "Setting build type to 'Develop' as a default.")
  set(CMAKE_BUILD_TYPE Develop CACHE STRING "Choose the type of build." FORCE)
endif()

message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")

# copied over from my old Makefile
# TODO: needs to be modified and set somewhere else other than CMakeLists.txt
set(PERF_CXX_FLAGS_DEVELOP "-g3 -O2")
set(PERF_CXX_FLAGS_FAST "-O3 -march=native")
set(PERF_CXX_FLAGS_SANITIZE "-g3 -O2")
set(PERF_CXX_FLAGS_PROFILE "-g3 -O2 -pg")
set(PERF_CXX_FLAGS_DEBUG "-g3 -O2")

set(CUSTOM_CXX_FLAGS_ALWAYS "-fno-exceptions -Wall -Wextra -Wshadow -Wundef")
set(CUSTOM_CXX_FLAGS_SAFE "${CUSTOM_CXX_FLAGS_ALWAYS} -Wpedantic")

set(CUSTOM_CXX_FLAGS_DEVELOP         "${CUSTOM_CXX_FLAGS_SAFE} ${PERF_CXX_FLAGS_DEVELOP}")
set(CUSTOM_CXX_FLAGS_DEBUG           "${CUSTOM_CXX_FLAGS_SAFE} ${PERF_CXX_FLAGS_DEBUG}")
set(CUSTOM_CXX_FLAGS_PROFILE         "${CUSTOM_CXX_FLAGS_SAFE} ${PERF_CXX_FLAGS_PROFILE}")
set(CUSTOM_CXX_FLAGS_FAST            "${CUSTOM_CXX_FLAGS_SAFE} ${PERF_CXX_FLAGS_FAST}")
set(CUSTOM_CXX_FLAGS_SANITIZE        "${CUSTOM_CXX_FLAGS_SAFE} ${PERF_CXX_FLAGS_SANITIZE} -fsanitize=address,undefined")
set(CUSTOM_CXX_FLAGS_THREAD_SANITIZE "${CUSTOM_CXX_FLAGS_SAFE} ${PERF_CXX_FLAGS_SANITIZE} -fsanitize=thread")
#
set(CUSTOM_LINK_FLAGS_NORMAL "-flto=auto")
set(CUSTOM_LINK_FLAGS_DEBUG "")
set(CUSTOM_LINK_FLAGS_PROFILE "${CUSTOM_LINK_FLAGS_NORMAL} -pg")
set(CUSTOM_LINK_FLAGS_SANITIZE "${CUSTOM_LINK_FLAGS_DEBUG} -fsanitize=address -lubsan")
set(CUSTOM_LINK_FLAGS_THREAD_SANITIZE "${CUSTOM_LINK_FLAGS_DEBUG} -ltsan")

set(CMAKE_C_FLAGS_DEVELOP
  "${CUSTOM_CXX_FLAGS_DEVELOP}" CACHE STRING "")
set(CMAKE_CXX_FLAGS_DEVELOP
  "${CUSTOM_CXX_FLAGS_DEVELOP}" CACHE STRING "")
set(CMAKE_EXE_LINKER_FLAGS_DEVELOP
  "${CUSTOM_LINK_FLAGS_NORMAL}" CACHE STRING "")
set(CMAKE_SHARED_LINKER_FLAGS_DEVELOP
  "${CUSTOM_LINK_FLAGS_NORMAL}" CACHE STRING "")
set(CMAKE_STATIC_LINKER_FLAGS_DEVELOP
  "${CUSTOM_LINK_FLAGS_NORMAL}" CACHE STRING "")
set(CMAKE_MODULE_LINKER_FLAGS_DEVELOP
  "${CUSTOM_LINK_FLAGS_NORMAL}" CACHE STRING "")

set(CMAKE_C_FLAGS_DEBUG
  "${CUSTOM_CXX_FLAGS_DEBUG}" CACHE STRING "")
set(CMAKE_CXX_FLAGS_DEBUG
  "${CUSTOM_CXX_FLAGS_DEBUG}" CACHE STRING "")
set(CMAKE_EXE_LINKER_FLAGS_DEBUG
  "${CUSTOM_LINK_FLAGS_DEBUG}" CACHE STRING "")
set(CMAKE_SHARED_LINKER_FLAGS_DEBUG
  "${CUSTOM_LINK_FLAGS_DEBUG}" CACHE STRING "")
set(CMAKE_STATIC_LINKER_FLAGS_DEBUG
  "${CUSTOM_LINK_FLAGS_DEBUG}" CACHE STRING "")
set(CMAKE_MODULE_LINKER_FLAGS_DEBUG
  "${CUSTOM_LINK_FLAGS_DEBUG}" CACHE STRING "")

set(CMAKE_C_FLAGS_PROFILE
  "${CUSTOM_CXX_FLAGS_PROFILE}" CACHE STRING "")
set(CMAKE_CXX_FLAGS_PROFILE
  "${CUSTOM_CXX_FLAGS_PROFILE}" CACHE STRING "")
set(CMAKE_EXE_LINKER_FLAGS_PROFILE
  "${CUSTOM_LINK_FLAGS_DEBUG}" CACHE STRING "")
set(CMAKE_SHARED_LINKER_FLAGS_PROFILE
  "${CUSTOM_LINK_FLAGS_DEBUG}" CACHE STRING "")
set(CMAKE_STATIC_LINKER_FLAGS_PROFILE
  "${CUSTOM_LINK_FLAGS_DEBUG}" CACHE STRING "")
set(CMAKE_MODULE_LINKER_FLAGS_PROFILE
  "${CUSTOM_LINK_FLAGS_DEBUG}" CACHE STRING "")

set(CMAKE_C_FLAGS_FAST
  "${CUSTOM_CXX_FLAGS_FAST}" CACHE STRING "")
set(CMAKE_CXX_FLAGS_FAST
  "${CUSTOM_CXX_FLAGS_FAST}" CACHE STRING "")
set(CMAKE_EXE_LINKER_FLAGS_FAST
  "${CUSTOM_LINK_FLAGS_NORMAL}" CACHE STRING "")
set(CMAKE_SHARED_LINKER_FLAGS_FAST
  "${CUSTOM_LINK_FLAGS_NORMAL}" CACHE STRING "")
set(CMAKE_STATIC_LINKER_FLAGS_FAST
  "${CUSTOM_LINK_FLAGS_NORMAL}" CACHE STRING "")
set(CMAKE_MODULE_LINKER_FLAGS_FAST
  "${CUSTOM_LINK_FLAGS_NORMAL}" CACHE STRING "")

set(CMAKE_C_FLAGS_SANITIZE
  "${CUSTOM_CXX_FLAGS_SANITIZE}" CACHE STRING "")
set(CMAKE_CXX_FLAGS_SANITIZE
  "${CUSTOM_CXX_FLAGS_SANITIZE}" CACHE STRING "")
set(CMAKE_EXE_LINKER_FLAGS_SANITIZE
  "${CUSTOM_LINK_FLAGS_SANITIZE}" CACHE STRING "")
set(CMAKE_SHARED_LINKER_FLAGS_SANITIZE
  "${CUSTOM_LINK_FLAGS_SANITIZE}" CACHE STRING "")
set(CMAKE_STATIC_LINKER_FLAGS_SANITIZE
  "${CUSTOM_LINK_FLAGS_SANITIZE}" CACHE STRING "")
set(CMAKE_MODULE_LINKER_FLAGS_SANITIZE
  "${CUSTOM_LINK_FLAGS_SANITIZE}" CACHE STRING "")

set(CMAKE_C_FLAGS_THREAD_SANITIZE
  "${CUSTOM_CXX_FLAGS_THREAD_SANITIZE}" CACHE STRING "")
set(CMAKE_CXX_FLAGS_THREAD_SANITIZE
  "${CUSTOM_CXX_FLAGS_THREAD_SANITIZE}" CACHE STRING "")
set(CMAKE_EXE_LINKER_FLAGS_THREAD_SANITIZE
  "${CUSTOM_LINK_FLAGS_THREAD_SANITIZE}" CACHE STRING "")
set(CMAKE_SHARED_LINKER_FLAGS_THREAD_SANITIZE
  "${CUSTOM_LINK_FLAGS_THREAD_SANITIZE}" CACHE STRING "")
set(CMAKE_STATIC_LINKER_FLAGS_THREAD_SANITIZE
  "${CUSTOM_LINK_FLAGS_THREAD_SANITIZE}" CACHE STRING "")
set(CMAKE_MODULE_LINKER_FLAGS_THREAD_SANITIZE
  "${CUSTOM_LINK_FLAGS_THREAD_SANITIZE}" CACHE STRING "")

project(imagegrid_viewer)

# list(APPEND CMAKE_CONFIGURATION_TYPES Develop)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

find_package(PkgConfig REQUIRED)
pkg_check_modules(LIBPNG REQUIRED libpng)
pkg_check_modules(LIBTIFF REQUIRED libtiff-4)
pkg_check_modules(LIBZIP REQUIRED libzip)
pkg_check_modules(SDL2 REQUIRED sdl2)
pkg_check_modules(SDL2TTF REQUIRED SDL2_ttf)

add_executable(imagegrid-viewer)
add_subdirectory(src)
add_subdirectory(src/c_io_net)
add_subdirectory(src/c_misc)
add_subdirectory(src/c_sdl2)
add_subdirectory(src/datatypes)
add_subdirectory(src/imagegrid)
# target_compile_options(imagegrid-viewer PRIVATE -std=c++17 -fno-exceptions -Wall -Wextra -Wshadow -Wundef)

target_link_libraries(imagegrid-viewer
  ${LIBPNG_LIBRARIES}
  ${LIBTIFF_LIBRARIES}
  ${LIBZIP_LIBRARIES}
  ${SDL2_LIBRARIES}
  ${SDL2TTF_LIBRARIES})
link_directories(src)
link_directories(src/c_io_net)
link_directories(src/c_misc)
link_directories(src/c_sdl2)
link_directories(src/datatypes)
link_directories(src/imagegrid)
